--- a/templates/home/home2.html
+++ b/templates/home/home2.html
@@ -276,6 +276,9 @@ header h1 {
 }
 
 @media (max-width: 768px) {
+    
+    .banner {
+    margin-top: 129px;
     .section-about .content {
         gap: 15px;
     }
