--- a/templates/home/home2.html
+++ b/templates/home/home2.html
@@ -278,7 +278,7 @@ header h1 {
 @media (max-width: 768px) {
     
     .banner {
-    margin-top: 129px;
+    margin-top: 129px;}
     .section-about .content {
         gap: 15px;
     }
