--- a/templates/home/base.html
+++ b/templates/home/base.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Ja pra cozinha{% endblock %}</title>
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+    <link rel="stylesheet" href="{% static 'assets/css/styles.css' %}">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Pacifico&display=swap" rel="stylesheet">
@@ -41,7 +41,7 @@
 
     
 
-    <script src="{% static 'js/scripts.js' %}"></script>
+    <script src="{% static 'assets/js/scripts.js' %}"></script>
     <!-- Adicione mais links de JavaScript aqui -->
 </body>
 </html>
