--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -96,7 +96,7 @@
             <div class="category-title">Sais</div>
             <div class="category-content">
                 <div class="product">
-                    <img src="{% static 'assets/images/sais.webp' %}" alt="Sal" width="300" height="auto" loading="lazy">
+                    <img src="{% static 'assets/images/sais.png' %}" alt="Sal" width="300" height="auto" loading="lazy">
                     <p>Descubra nossos sais especiais, ideais para realçar o sabor de qualquer prato com um toque gourmet.
                         Sais premium com uma seleção cuidadosa de ingredientes para proporcionar o máximo de sabor.</p>
                 </div>
