--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -107,7 +107,7 @@
             <div class="category-title">Chutneis</div>
             <div class="category-content">
                 <div class="product">
-                    <img src="{% static 'assets/images/chutneis.webp' %}" alt="Chutney" width="300" height="auto" loading="lazy">
+                    <img src="{% static 'assets/images/chutneis.png' %}" alt="Chutney" width="300" height="auto" loading="lazy">
                     <p>Nossos chutneis são elaborados para oferecer uma experiência sensorial rica e marcante.
                         Perfeitos para acompanhar carnes, queijos e diversos pratos, proporcionando um sabor único.</p>
                 </div>
